tests/NormalTests/paczka1/fuzzy1/57216692.err
Error in line 5: PC1N A779 96,1
Error in line 1: vkkoP2Y7ydQ A656 75,0
Error in line 16: KLAJRgF7u A350 71,2
Error in line 23: oNC0L1mL82E A779 65,9
